# openslam_copslam

COP-SLAM_v0.1/: .directory  CMakeLists.txt  README
COP-SLAM_v0.1/inc/: .directory  poseChain.hpp  poseIO.hpp
COP-SLAM_v0.1/src/: CMakeLists.txt  main.cpp  poseChain.cpp  poseIO.cpp  run_demo.sh  showG2OFiles.m
