
# define all source files
SET(copslamsrc main.cpp poseIO.cpp poseChain.cpp) 

# define the executable and its source files
ADD_EXECUTABLE(main ${copslamsrc})

# give executable a name and an output dir
SET_TARGET_PROPERTIES(main PROPERTIES OUTPUT_NAME copslam) 
SET_TARGET_PROPERTIES(main PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../ )

# for install copy executable and demo script
set( CMAKE_SOURCE_DIR ${CMAKE_BINARY_DIR} )
install(FILES run_demo.sh DESTINATION ${CMAKE_BINARY_DIR}/../bin PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
install(FILES showG2OFiles.m DESTINATION ${CMAKE_BINARY_DIR}/../bin PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
install(FILES ${CMAKE_BINARY_DIR}/copslam DESTINATION ${CMAKE_BINARY_DIR}/../bin PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
